# RecipeBox-1

./: manage.py  pyproject.toml
courier/: settings.py  urls.py
recipe_box/: admin.py  forms.py  models.py  urls.py  views.py
recipe_box/migrations/: 0001_initial.py
recipe_box/templates/: add_author.html  add_recipe.html  author.html  edit_recipe.html  error.html  index.html  loginpage.html  recipe.html
