[tool.poetry]
name = "recipe_box_v1"
version = "0.1.0"
description = ""
authors = ["DavidRinSE <davidrichardsonin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
